--- a/css/styles.css
+++ b/css/styles.css
@@ -991,6 +991,7 @@ Products Page
   border-radius: 50%;
   color: var(--clr-primary-1);
   border: 0.375rem solid var(--clr-grey-10);
+  /* something here */
 }
 .project-page-project-info {
   padding: 2rem 1.5rem;
